--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -7,13 +7,31 @@
     <uses-sdk
         android:minSdkVersion="19"
         android:targetSdkVersion="21" />
+    
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.CAMERA"/>
 
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
+        
+        <receiver android:name="coursera.labs.dailyselfie.AlarmReceiver"></receiver>
+        
+        <provider
+            android:authorities="coursera.labs.dailyselfie.provider"
+            android:name="coursera.labs.dailyselfie.provider.SelfieContentProvider"
+            android:exported="false"
+            />
+        
         <activity
+            android:name="coursera.labs.dailyselfie.DisplayImageActivity" />
+        
+        <activity
+            android:launchMode="singleTask"
+            android:clearTaskOnLaunch="true"
+            android:configChanges="orientation"
             android:name=".MainActivity"
             android:label="@string/app_name" >
             <intent-filter>
